IngressClass.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: alb
  namespace: devops-intermidate
spec:
  controller: k8s.io/internal-ingress-nginx
