deploymant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: devops-intermidate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 654399508061.dkr.ecr.us-east-2.amazonaws.com/my-ecr-repo:${IMAGE_TAG}
        ports:
        - containerPort: 80
