Service-wephook.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-load-balancer-webhook-service
  namespace: kube-system
spec:
  selector:
    app: aws-load-balancer-webhook
  ports:
    - name: webhook
      port: 443
      targetPort: webhook
