service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: devops-intermidate
spec:
  selector:
    tier: nginx
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
  type: ClusterIP
