ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: devops-intermidate
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-webhook-dns-zone: "aws-load-balancer-webhook-service.kube-system.svc.cluster.local"
    my-image.ingress.kubernetes.io/ssl-redirect: "false"
    my-image.ingress.kubernetes.io/use-regex: "true"
    my-image.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: hello.team2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
